--- a/app/views/support/new.html.erb
+++ b/app/views/support/new.html.erb
@@ -1,8 +1,16 @@
 <div class="container">
-  <h3 class="text-center">Support</h3>
-  <%= form_for "/contacts" do |f| %>
-    <%= f.label :comments %>
-    <%= f.text_area :comments %>
-    <%= f.submit 'Submit' %>
-  <% end %>
+  <div class="row">
+    <h3 class="text-center">Contact Us</h3>
+    <div class="col-md-4 col-md-offset-4">
+      <div class="well">
+        <%= form_for "/support" do |f| %>
+          <div class="form-group">
+            <%= f.label :comments %>
+            <%= f.text_area :comments, class: 'form-control' %>
+          </div>
+          <%= f.submit 'Submit', class: 'btn btn-default' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
