alles funktioniert bis auf message/support

--- a/app/views/support/new.html.erb
+++ b/app/views/support/new.html.erb
@@ -9,6 +9,7 @@
             <%= f.text_area :comments, class: 'form-control' %>
           </div>
           <%= f.submit 'Submit', class: 'btn btn-default' %>
+          <%= flash[:notice] %>
         <% end %>
       </div>
     </div>
