--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,68 @@
   </head>
 
   <body>
-
+    
+     <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <% if user_signed_in? %>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed btn-lg" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            
+            <a href="/" class="dropdown-toggle navbar-brand navbar-light bg-faded dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=current_user.username %> <span class="caret "></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/newGame">New Game</a></li>
+                <li><a href="/mailbox/inbox">Message</a></li>
+                <li><a href="/friends">Friends</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="/support">Support</a></li>
+              </ul>
+          </div>
+          
+          <% else %>
+            <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            
+            <a class="navbar-brand navbar-light bg-faded" href="/">1v1meNoob</a>
+          </div>
+          <% end %>
+          
+    <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="/stats">Stats</a></li>
+          <li><a href="/ranking">Ranking</a></li>
+        </ul>
+        <form class="navbar-form navbar-left">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search for players">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/about">About</a></li>
+        </ul>
+        <div class="navbar-right">
+          <% if user_signed_in? %>
+            <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn" %>
+          <% else %>
+            <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %>
+            <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %>
+          <% end %>
+        </div>
+      </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
       <%= yield %>
   </body>
 </html>
